# ekika

./: .dockerignore  .earthlyignore  .gitmodules  Cargo.toml  Earthfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: test.yml
activity-derive/: Cargo.toml
activity-derive/src/: lib.rs
activity-vocabulary/: Cargo.toml  README.md  activity_vocabulary.yaml
activity-vocabulary/src/: context.rs  def_util.rs  lib.rs
activity-vocabulary/src/activity/: accept.rs  add.rs  announce.rs  arrive.rs  block.rs  create.rs  delete.rs  dislike.rs  flag.rs  follow.rs  ignore.rs  invite.rs  join.rs  leave.rs  like.rs  listen.rs  mod.rs  move_.rs  offer.rs  question.rs  read.rs  reject.rs  remove.rs  tentative_accept.rs  tentative_reject.rs  travel.rs  undo.rs  update.rs  view.rs
activity-vocabulary/src/actor/: application.rs  group.rs  mod.rs  organization.rs  person.rs  service.rs
activity-vocabulary/src/core/: activity.rs  collection.rs  collection_page.rs  intransitive_activity.rs  link.rs  mod.rs  object.rs  ordered_collection.rs  ordered_collection_page.rs
activity-vocabulary/src/object_and_link/: article.rs  audio.rs  document.rs  event.rs  image.rs  mention.rs  mod.rs  note.rs  page.rs  place.rs  profile.rs  relationship.rs  tombstone.rs  video.rs
activity-vocabulary/src/vocab/: activity.rs  actor.rs  core.rs  mod.rs  object_and_link.rs
activity-vocabulary/tests/: deserialize.rs
activitypub/: Cargo.toml
activitypub/src/: lib.rs
activitystreams/: Cargo.toml
activitystreams-core/: Cargo.toml
activitystreams-derive/: Cargo.toml
angara/: Cargo.toml
angara-ui/: package.json
angara/src/: main.rs
axum-helper/: Cargo.toml
axum-helper/src/: headers.rs  lib.rs
dev-tools/: Gemfile  provision_debug_env.rb
ekika/: Cargo.toml  Dockerfile  vocab.yml
ekika-ui/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml
ekika-ui/adapters/static/: vite.config.ts
ekika/src/: external.rs  lib.rs  main.rs  types.rs  webfinger.rs
ekika/src/model/: account.rs
ekika/src/res/: host-meta.xml
ekika/src/util/: mod.rs
micropub/: Cargo.toml
micropub-ui/: .gitignore  package.json  pnpm-lock.yaml
micropub-ui/src/app/: layout.tsx  page.tsx
