[workspace]
members = ["ekika", "axum-helper"]
package.edition = "2021"
package.version = "0.0.1"
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["tracing", "http2", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1.80"
activity-vocabulary = "0.0.5"
activity-vocabulary-core = "0.0.5"
activity-vocabulary-derive = { version = "0.0.5" }
anyhow = { version = "1", features = ["backtrace"] }
http = "1"
handlebars = "5"
metrics = "0.22"
mime = "0.3"
moka = { version = "0.12", features = ["future"] }
serde = "1"
serde-value = "0.7"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "tracing",
    "sync",
    "signal",
    "fs",
] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1", features = ["valuable"] }
typed-builder = "0.18"
url = { version = "2.5", features = ["serde"] }
valuable = { version = "0.1", features = ["valuable-derive", "derive"] }
