[package]
name = "activity-vocabulary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
typify = "0.0.13"
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.107"
