[package]
name = "activity-vocabulary"
version = "0.0.1"
edition = "2021"
authors = ["Masaki Nakano <admin@namachan10777.dev>"]
categories = ["Parser implementations", "API bindings", "Web programming"]
keywords = ["activitypub", "activitystreams", "activityvocabulary"]
description = "Type definitions of Activity Vocabulary 2.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
resolve-remote = ["resolve-remote-webpki"]
resolve-remote-webpki = ["reqwest/rustls-tls-webpki-roots"]
resolve-remote-native = ["reqwest/rustls-tls-native-roots"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
nom = { version = "7", default-features = false }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
