[package]
name = "activitypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activity-derive = { version = "0.1.0", path = "../activity-derive" }
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
url = { version = "2.4.1", features = ["serde"] }
