[package]
name = "axum-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
http = "0.2"
mime = "0.3"
serde = "1"
serde_json = "1"
