[package]
name = "axum-helper"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["headers"] }
mime.workspace = true
serde_json.workspace = true
async-trait.workspace = true
http.workspace = true
serde.workspace = true
