[package]
name = "ekika"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activity-vocabulary = "0.0.4"
activity-vocabulary-core = "0.0.4"
anyhow = { version = "1", features = ["backtrace"] }
async-trait.workspace = true
aws-config = "0.56"
aws-sdk-dynamodb = "0.30"
aws-sdk-opensearch = "0.30"
aws-sdk-s3 = "0.30"
axum = { workspace = true, features = ["tracing", "http2", "multipart", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-helper = { version = "0.0.1", path = "../axum-helper" }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
handlebars = "5"
http = { workspace = true }
maplit = "1"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
mime.workspace = true
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls-native-roots",
], default-features = false }
sentry = { version = "0.32", default-features = false, features = [
    "rustls",
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "tracing",
    "reqwest",
] }
sentry-tracing = { version = "0.32", features = ["backtrace"] }
serde = { workspace = true, features = ["derive"] }
serde-value = "0.7.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_30"] }
serde_json.workspace = true
thiserror = "1"
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
    "tracing",
    "sync",
    "signal",
    "fs",
] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "valuable",
    "json",
] }
typed-builder = "0.18.1"
url = { version = "2.5", features = ["serde"] }
valuable = { version = "0.1", features = ["valuable-derive", "derive"] }

[build-dependencies]
activity-vocabulary-derive = { version = "0.0.4" }
serde_yaml = "0.9.33"
