[package]
name = "ekika"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
activity-vocabulary.workspace = true
activity-vocabulary-core.workspace = true
anyhow.workspace = true
aws-config = "1.2"
aws-sdk-dynamodb = "1.23"
aws-sdk-opensearch = "1.25"
aws-sdk-s3 = "1.24"
axum.workspace = true
axum-extra.workspace = true
axum-helper = { version = "0.0.1", path = "../axum-helper" }
handlebars.workspace = true
clap = { version = "4", features = ["derive", "env"] }
http = { workspace = true }
maplit = "1"
metrics.workspace = true
metrics-exporter-prometheus = { version = "0.14", default-features = false, features = [
    "http-listener",
] }
moka.workspace = true
mime.workspace = true
once_cell = "1.19"
sentry = { version = "0.32", default-features = false, features = [
    "rustls",
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "tracing",
    "reqwest",
] }
sentry-tracing = { version = "0.32", features = ["backtrace"] }
serde = { workspace = true, features = ["derive"] }
serde-value.workspace = true
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "valuable",
    "json",
] }
typed-builder.workspace = true
url.workspace = true
valuable.workspace = true

[build-dependencies]
activity-vocabulary-derive.workspace = true
serde_yaml.workspace = true
